maze.lessons.maze.island.IslandMaze.scala.error
Escaper:37: error: ')' expected but ';' found.
		case 0 => {setDirection(Direction.NORD); while (!estFaceMur() && (!estSurBiscuit()) {avance()}; e = 1;droite()}
                                                                                                              ^